--- a/apis/definition.yaml
+++ b/apis/definition.yaml
@@ -15,12 +15,75 @@ spec:
       schema:
         openAPIV3Schema:
           type: object
+          required:
+            - spec
           properties:
             spec:
               type: object
-              x-kubernetes-preserve-unknown-fields: true
+              description: "WorkloadIdentitySpec defines the desired state of WorkloadIdentity"
+              x-kubernetes-preserve-unknown-fields: true #TODO: delete
+              required:
+                - forProvider
+              properties:
+                forProvider:
+                  type: object
+                  required:
+                    - location
+                    - resourceGroupName
+                    - oidcIssuerURL
+                    - roleAssignments
+                  description: "ForProvider specifies the parameters for configuring the Azure workload identity resources"
+                  properties:
+                    location:
+                      type: string
+                      description: "Azure region where the resources will be created (e.g., eastus, westeurope)"
+                    resourceGroupName:
+                      type: string
+                      description: "Name of the Azure Resource Group where the workload identity resources will be created"
+                    oidcIssuerURL:
+                      type: string
+                      description: "OIDC issuer URL for the Kubernetes cluster (used for federated identity credential)"
+                    roleAssignments:
+                      type: array
+                      description: "List of Azure role assignments to grant to the workload identity"
+                      items:
+                        type: object
+                        properties:
+                          roleDefinitionName:
+                            type: string
+                            description: "Name of the Azure built-in role or custom role to assign (e.g., Contributor, Reader)"
+                          scope:
+                            type: string
+                            description: "Azure resource ID defining the scope of the role assignment (e.g., subscription, resource group, or specific resource)"
+                          createCustomRole:
+                            type: bool
+                            nullable: true
+                            description: "If true, creates a custom role with the specified data actions instead of using a built-in role"
+                          customRoleDataActions:
+                            type: array
+                            nullable: true
+                            description: "List of data actions to include in the custom role (only used when createCustomRole is true)"
+                            items:
+                              type: string
+                    tags:
+                      type: object
+                      description: "Azure resource tags to apply to the created resources"
+                      additionalProperties:
+                        type: string
+                providerConfigRef:
+                  type: object
+                  description: "ProviderConfigReference specifies how the provider that will be used to create, observe, update, and delete this managed resource should be configured"
+                  properties:
+                    kind:
+                      type: string
+                      description: "Kind of the provider config reference (e.g., ProviderConfig)"
+                    name:
+                      type: string
+                      description: "Name of the provider config to use"
+                  required:
+                    - kind
+                    - name
             status:
               type: object
+              description: "WorkloadIdentityStatus defines the observed state of WorkloadIdentity"
               x-kubernetes-preserve-unknown-fields: true
-          required:
-            - spec
