--- a/examples/providers.yaml
+++ b/examples/providers.yaml
@@ -1,15 +1,31 @@
 apiVersion: pkg.crossplane.io/v1
 kind: Provider
 metadata:
-  name: provider-family-azure
+  name: provider-azure
 spec:
   package: xpkg.upbound.io/upbound/provider-family-azure:v2
 
 ---
-apiVersion: azure.m.upbound.io/v1beta1
-kind: ProviderConfig
+apiVersion: pkg.crossplane.io/v1
+kind: Provider
 metadata:
-  name: provider-azure
+  name: provider-azure-authorization
+spec:
+  package: xpkg.upbound.io/upbound/provider-azure-authorization:v2
+
+---
+apiVersion: pkg.crossplane.io/v1
+kind: Provider
+metadata:
+  name: provider-azure-managedidentity
+spec:
+  package: xpkg.upbound.io/upbound/provider-azure-managedidentity:v2
+
+---
+apiVersion: azure.m.upbound.io/v1beta1
+kind: ClusterProviderConfig
+metadata:
+  name: default
 spec:
   credentials:
     source: Secret
@@ -17,21 +33,3 @@ spec:
       name: provider-azure
       namespace: crossplane-system
       key: credential
-
----
-apiVersion: pkg.crossplane.io/v1
-kind: Provider
-metadata:
-  name: provider-kubernetes
-spec:
-  package: xpkg.upbound.io/upbound/provider-kubernetes:v1
-
----
-apiVersion: kubernetes.m.crossplane.io/v1alpha1
-kind: ClusterProviderConfig
-metadata:
-  name: default
-  namespace: crossplane-system
-spec:
-  credentials:
-    source: InjectedIdentity
